--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "download-git-repo": "^2.0.0",
+    "fs-extra": "^8.0.1",
     "inquirer": "^6.3.1",
-    "ora": "^3.4.0"
+    "ora": "^3.4.0",
+    "validate-npm-package-name": "^3.0.0"
   }
 }
