--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "acmed-cli",
-  "version": "0.0.3",
-  "description": "极致医疗后台管理系统模板",
+  "version": "1.0.0",
+  "description": "极致医疗脚手架",
+  "main": "./bin/acmed.js",
   "bin": {
-    "acmed": "bin/acmed",
-    "acmed-create": "bin/acmed-create"
+    "acmed": "./bin/acmed.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/lixp2000/Acmed-cli#readme",
   "dependencies": {
-    "chalk": "^2.4.2",
-    "commander": "^2.20.0",
-    "download-git-repo": "^2.0.0",
-    "fs-extra": "^8.0.1",
-    "inquirer": "^6.3.1",
-    "ora": "^3.4.0",
-    "validate-npm-package-name": "^3.0.0"
+    "chalk": "^3.0.0",
+    "commander": "^4.0.1",
+    "download-git-repo": "^3.0.2",
+    "fs-extra": "^8.1.0",
+    "inquirer": "^7.0.0",
+    "ora": "^4.0.3",
+    "validate-npm-package-name": "^3.0.0",
+    "vinyl-fs": "^3.0.3"
   }
 }
